# pantools

./: .gitignore  MANIFEST.in  buildall  conf.py  install_latest  pyproject.toml  requirements.txt  setup.py  x
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/pantools/: modules.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/pantools/: modules.html
html/pantools/: CameraClient.html  ClientConnection.html  TCPClient.html  TCPServer.html  index.html  logger.html  msg.html  net.html  send_recv.html
pantools/: CameraClient.py  ClientConnection.py  JsonClientConnection.py  JsonTCPClient.py  JsonTCPClientConnection.py  JsonTCPServer.py  Motion.py  TCPClient.py  TCPServer.py  VideoRecorder.py  __init__.py  face.py  logger.py  motion.py  motion1.py  msg.py  net.py  send_recv.py  strategies.py  tcp.py  tools.py
src/: TCPClient.py  TCPServer.py  __init__.py  send_recv.py
tests/: detect_faces_in_files.py  test_myfunctions.py  test_net.py  test_tcpclient.py
