[tool.poetry]
name = "pantools"
version = "0.1.17"
description = "A collection of generic Python tools by Peter Andersson"
authors = ["Peter Andersson <fshsweden@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
numpy = "^1.19.4"
imutil = "^0.2.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
